objects/SystemMutedTriggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SFDC1-405 This Custom Settings is used by Trigger Framework to switch trigger on/off for individual user/whole org.</description>
    <fields>
        <fullName>AccountRanking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7592 : To switch AccountRanking object triggers on/off</description>
        <inlineHelpText>Check to switch AccountRanking object triggers on</inlineHelpText>
        <label>AccountRanking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTeamMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-5037 To switch Account team member object triggers on/off</description>
        <inlineHelpText>Check to switch account team member object triggers on</inlineHelpText>
        <label>Account Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch account object triggers on/off</description>
        <inlineHelpText>Check to switch account object triggers on</inlineHelpText>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdClaimChangeLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8546 : To switch AdClaimChangeLog object triggers on/off</description>
        <inlineHelpText>Check to switch AdClaimChangeLog object triggers on</inlineHelpText>
        <label>AdClaimChangeLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdClaim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8539 : To switch AdClaim object triggers on/off</description>
        <inlineHelpText>Check to switch AdClaim object triggers on</inlineHelpText>
        <label>AdClaim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalAccountFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2103 To switch Additional Account Fields object triggers on/off</description>
        <inlineHelpText>Check to switch Additional Account Fields object triggers on</inlineHelpText>
        <label>AdditionalAccountFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalCaseFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-515 To switch AdditionalCaseFields object triggers on/off</description>
        <label>AdditionalCaseFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalContactFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2299 To switch Additional Contact Fields object triggers on/off</description>
        <label>AdditionalContactFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalOpportunityFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937 : To switch AdditionalOpportunityFields object triggers on/off</description>
        <inlineHelpText>Check to switch AdditionalOpportunityFields object triggers on</inlineHelpText>
        <label>AdditionalOpportunityFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalProductLoginFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6347 To switch Additional Product Login Fields object triggers on/off</description>
        <label>AdditionalProductLoginFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch Asset object triggers on/off</description>
        <inlineHelpText>Check to switch Asset object triggers on</inlineHelpText>
        <label>Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingScheduleLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7472 : To switch BillingScheduleLineItem object triggers on/off</description>
        <inlineHelpText>Check to switch BillingScheduleLineItem object triggers on</inlineHelpText>
        <label>BillingScheduleLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignInfluence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6636 - Campaign Influence</description>
        <label>CampaignInfluence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC - 1234 To switch CampaignMember object triggers on/off</description>
        <inlineHelpText>Check to switch CampaignMember object triggers on</inlineHelpText>
        <label>CampaignMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To switch Campaign triggers on/off.</description>
        <label>Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3511 To switch Case Comment object triggers on/off</description>
        <inlineHelpText>Check to switch Case Comment object triggers off</inlineHelpText>
        <label>CaseComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseContracts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-593: Writing triggers on Case contracts. So, adding it.</description>
        <label>CaseContracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOpportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-593: Writing new trigger for CaseOpportunities object to update case.</description>
        <label>CaseOpportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-593: Writing new trigger for CaseProducts object to validate before inserting.</description>
        <label>CaseProducts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch case object triggers on/off</description>
        <inlineHelpText>Check to switch case object triggers on</inlineHelpText>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeLog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POLK - To switch Change Log Fields object triggers on/off</description>
        <inlineHelpText>POLK -  To switch Change Log Fields object triggers on/off</inlineHelpText>
        <label>ChangeLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChannelProgramContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8547 : To switch ChannelProgramContact object triggers on/off</description>
        <inlineHelpText>Check to switch ChannelProgramContact object triggers on</inlineHelpText>
        <label>ChannelProgramContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-834  To switch chat survey object triggers on/off</description>
        <inlineHelpText>Check to switch chat survey  object triggers on</inlineHelpText>
        <label>ChatSurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch contact object triggers on/off</description>
        <inlineHelpText>Check to switch account contact triggers on</inlineHelpText>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentDocumentLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContentDocumentLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-4182To switch Content Document object triggers on/off</description>
        <label>ContentDocument</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8559 : To switch ContractAttachment object triggers on/off</description>
        <inlineHelpText>Check to switch ContractAttachment object triggers on</inlineHelpText>
        <label>ContractAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-10588: Writing triggers on Contract Line Item. So, adding it.</description>
        <label>Contract Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractProductAlliancePartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-4235: To switch ContractProductAlliancePartner object triggers on/off</description>
        <label>ContractProductAlliancePartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch contract object triggers on/off</description>
        <inlineHelpText>Check to switch account contract triggers on</inlineHelpText>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8538: To switch EmailMessage object triggers on/off</description>
        <inlineHelpText>Check to switch EmailMessage object triggers off</inlineHelpText>
        <label>EmailMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldServiceActivityOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldServiceActivityOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldServiceActivityProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4275 FieldServiceActivityProduct__c check to prevent trigger execution</description>
        <label>FieldServiceActivityProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8542 To switch Internal Approval object triggers on/off</description>
        <inlineHelpText>Switch Internal Approval object triggers on/off</inlineHelpText>
        <label>InternalApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch lead object triggers on/off</description>
        <inlineHelpText>Check to switch lead object triggers on</inlineHelpText>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveChatTranscript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-834 To switch Live Chat Transcript object triggers on/off</description>
        <inlineHelpText>Check to switch Live Chat Transcript object triggers on</inlineHelpText>
        <label>LiveChatTranscript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterAgreementExhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2198 new custom junction object to create one to many relationship with Master Agreement Exhibit</description>
        <label>Master Agreement Exhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2748 Event MeetingNote Sync</description>
        <label>MeetingNote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4275 OpportunityLineItemSchedule__c check to prevent trigger execution</description>
        <label>OpportunityLineItemSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch OpportunityLineItem object triggers on/off</description>
        <inlineHelpText>Check to switch OpportunityLineItem object triggers on</inlineHelpText>
        <label>OpportunityLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunitySplit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch OpportunitySplit object triggers on/off</description>
        <inlineHelpText>Check to switch OpportunitySplit object triggers on</inlineHelpText>
        <label>OpportunitySplit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityTeamMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-4968 -Trigger Automated email when a team member is added or removed from an Opportunity</description>
        <label>OpportunityTeamMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch opportunity object triggers on/off</description>
        <inlineHelpText>Check to switch opportunity object triggers on</inlineHelpText>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POLK : To switch Additional Account Fields object triggers on/off</description>
        <inlineHelpText>POLK : Check to switch PLC Job object triggers on</inlineHelpText>
        <label>PLCJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductLoginContactAssociation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-10703 To switch Product Login object triggers on/off</description>
        <label>Product Login Contact Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6347 To switch Product Login object triggers on/off</description>
        <label>Product Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductUsageStatistics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7109 To switch Product Usage Statistics object triggers on/off</description>
        <inlineHelpText>switch Product Usage Statistics object triggers on/off</inlineHelpText>
        <label>ProductUsageStatistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SFDC-3115</inlineHelpText>
        <label>Related Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalatRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8545 Move all Opportunity at Risk object related Process Builder logic in the trigger</description>
        <inlineHelpText>Check to switch RenewalatRisk object triggers on/off</inlineHelpText>
        <label>RenewalatRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RocketDocsProposalRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RocketDocs Proposal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPGReferralLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPGReferralLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPGReferral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPGReferral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIncentiveApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Incentive Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetApexLoggerEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetApexLoggerEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetComplianceException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetComplianceException</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetContractCountonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetContractCountonAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetupEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetupEvents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To switch solution object triggers on/off</description>
        <inlineHelpText>Check to switch Solution object triggers on</inlineHelpText>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-4232 To switch account object triggers on/off</description>
        <inlineHelpText>Check to switch account object triggers on</inlineHelpText>
        <label>SurveyResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-405 To switch task object triggers on/off</description>
        <inlineHelpText>Check to switch task object triggers on</inlineHelpText>
        <label>Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-808 To switch User object triggers on/off</description>
        <label>User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkRequestForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfsDocuSignRecipientStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7213: Writing triggers on dsfs_DocuSign_Recipient_Status. So, adding it.</description>
        <inlineHelpText>dsfs_DocuSign_Recipient_Status managed package object</inlineHelpText>
        <label>dsfsDocuSignRecipientStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfsDocuSignStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7947 To switch object triggers on/off for dsfs_DocuSign_Status</description>
        <inlineHelpText>Check to switch object triggers on/off for dsfs_DocuSign_Status</inlineHelpText>
        <label>dsfsDocuSignStatus</label>
        <type>Checkbox</type>
    </fields>
    <label>System Muted Triggers</label>
</CustomObject>